// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MessageArea renders correctly with nested comments 1`] = `
<div>
  <div
    class="message-area"
  >
    <div
      class="thread-start"
    >
      <div
        class="message-box"
      >
        <div
          class="metadata"
        >
          <div
            class="author"
          >
            Author1
          </div>
          <div
            class="date"
          >
            2000-01-01 00:01:00
          </div>
        </div>
        <div
          class="message"
        >
           test1
        </div>
      </div>
    </div>
    <div
      class="comments"
    >
      <div
        class="message-box"
      >
        <div
          class="metadata"
        >
          <div
            class="author"
          >
            Author2
          </div>
          <div
            class="date"
          >
            2000-01-01 00:02:00
          </div>
        </div>
        <div
          class="message"
        >
           test2
        </div>
        <div
          class="message-box response"
        >
          <div
            class="metadata"
          >
            <div
              class="author"
            >
              Author4
            </div>
            <div
              class="date"
            >
              2000-01-01 00:04:00
            </div>
          </div>
          <div
            class="message"
          >
             test4
          </div>
        </div>
        <div
          class="message-box response"
        >
          <div
            class="metadata"
          >
            <div
              class="author"
            >
              Author5
            </div>
            <div
              class="date"
            >
              2000-01-01 00:05:00
            </div>
          </div>
          <div
            class="message"
          >
             test5
          </div>
        </div>
      </div>
      <div
        class="message-box"
      >
        <div
          class="metadata"
        >
          <div
            class="author"
          >
            Author3
          </div>
          <div
            class="date"
          >
            2000-01-01 00:03:00
          </div>
        </div>
        <div
          class="message"
        >
           test3
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`MessageArea renders correctly with props 1`] = `
<div>
  <div
    class="message-area"
  >
    <div
      class="thread-start"
    >
      <div
        class="message-box"
      >
        <div
          class="metadata"
        >
          <div
            class="author"
          >
            Author
          </div>
          <div
            class="date"
          >
            2000-01-01 00:00:00
          </div>
        </div>
        <div
          class="message"
        >
           test
        </div>
      </div>
    </div>
    <div
      class="comments"
    >
      <div
        class="message-box"
      >
        <div
          class="metadata"
        >
          <div
            class="author"
          >
            Author
          </div>
          <div
            class="date"
          >
            2000-01-01 00:00:00
          </div>
        </div>
        <div
          class="message"
        >
           test1
        </div>
      </div>
      <div
        class="message-box"
      >
        <div
          class="metadata"
        >
          <div
            class="author"
          >
            Author
          </div>
          <div
            class="date"
          >
            2000-01-01 00:00:00
          </div>
        </div>
        <div
          class="message"
        >
           test2
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`MessageArea renders correctly without props 1`] = `
<div>
  <div
    class="message-area"
  >
    <div
      class="thread-start"
    />
    <div
      class="comments"
    />
  </div>
</div>
`;
